# crewai_data_chat

./: .gitignore  README.md
backend/: chuj.py  main.py  pyproject.toml
backend/crew/src/crew/: crew.py  main.py
backend/crew/src/crew/UploadFilesKnowledgeSource/: UploadFilesKnowledgeSource.py
backend/crew/src/crew/config/: agents.yaml  tasks.yaml
frontend/: colorPallette.txt  index.html  package-lock.json  package.json  tailwind.config.js
frontend/firebase/: config.js
frontend/firebase/createData/: createChat.js
frontend/firebase/getData/: getChat.js  getUserChats.js  getUserData.js
frontend/firebase/updateData/: addMessage.js  filesUploaded.js
frontend/src/: App.jsx  Layout.jsx  main.jsx  messages.js
frontend/src/api/: UploadFiles.js  sendMessage.js
frontend/src/components/: Chat.jsx  ChatCard.jsx  ChatCardSidebar.jsx  ChatInput.jsx  ChatScreeen.jsx  Message.jsx  SideBar.jsx
frontend/src/notifications/: ErrorNotification.jsx
frontend/src/pages/: MainChatPage.jsx
