[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "OGrocketa",email = "jaroslaw.sedach@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools] (>=0.102.0,<0.103.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[project.scripts]
testcrew = "testcrew.main:run"
run_crew = "testcrew.main:run"
train = "testcrew.main:train"
replay = "testcrew.main:replay"
test = "testcrew.main:test"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.crewai]
type = "crew"

