[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "OGrocketa",email = "jaroslaw.sedach@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools] (>=0.102.0,<0.103.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[project.scripts]
run_crew = "crew.main:run"
start = "backend.main:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.crewai]
type = "crew"

